priv/email_templates/hybrid/default.css
/*
  Partially user-configurable styles
*/
body {
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
    color: #555555;
    font-size: 16px;
    line-height: 28px;
    mso-line-height-rule: exactly;
}

.email-bg {
    background-color: #f3f4f6;
    background-repeat: repeat;
}

#content {
    margin: auto;
    background-color: #ffffff;
    color: #1f2937;
    font-family: inherit;
    box-shadow: 0 0 8px rgba(0, 0, 0, .05);
}

a {
    color: #1d4ed8;
    text-decoration: underline;
}

h1 {
    font-size: 31px;
    line-height: 41px;
    font-weight: bold;
    color: #333333;
    mso-line-height-rule: exactly;
}

h2 {
    font-size: 25px;
    line-height: 33px;
    font-weight: bold;
    color: #333333;
    mso-line-height-rule: exactly;
}

h3 {
    font-size: 20px;
    line-height: 26px;
    font-weight: bold;
    mso-line-height-rule: exactly;
}


hr {
    border-width: 1px;
    border-style: solid;
    border-color: inherit;
    opacity: 0.1;
    margin: 40px 0;
}

.block--button .button-td {
    background-color: #1d4ed8;
    display: block;
    cursor: pointer;
    text-align: center;
    border-radius: 5px;
    margin: 20px 0;
}

.block--button .button-a {
    display: block;
    color: #ffffff;
    text-decoration: none;
    padding: 13px 17px;
    font-size: 15px;
    line-height: 15px;
    display: block;
}

.block--quote figure {
    margin: 0;
}

.block--quote blockquote, .block--quote figcaption {
    padding-left: 30px;
    padding-left: 30px;
    border-left: 5px solid;
    border-color: #e5e7eb;
}

.block--quote blockquote {
    font-family: inherit;
    color: inherit;
    margin: 0;
    padding-top: 10px;
    padding-bottom: 20px;
    padding-bottom: 10px;
    font-size: 25px;
}

.block--quote figcaption {
    font-family: inherit;
    color: inherit;
    padding-bottom: 10px;
}

.block--list ul, .block--list ol {
    list-style-position: inside;
    padding-left: 0;
}

#footer td {
    color: #4b5563;
    font-family: inherit;
    font-style: normal;
    font-weight: bold;
    text-decoration: none;
    text-align: center;
}

#footer td a {
    color: #374151;
    text-decoration: underline;
}

/*
  Inlined layout styles
*/

.email-container {
    max-width: 680px;
}

body.keila--markdown-campaign .email-container {
    max-width: 640px;
}

.block > td {
    padding: 0 20px;
    line-height: 28px;
    mso-line-height-rule: exactly;
}

.block.block--image > td {
    padding: 0 20px;
    line-height: 1;
}

.block + .block > td {
    padding-top: 20px;
}

#content > tbody > .block:first-of-type > td {
    padding-top: 20px;
}

#content > tbody > .block:last-of-type > td {
    padding-bottom: 20px;
}

.block--paragraph + .block--paragraph > td,
.block--heading + .block--paragraph > td {
    padding-top: 10px!important;
}

.block--layout > td {
    padding-left: 0;
    padding-right: 0;
}

.block--separator > td {
    padding-top: 0;
}

.block--separator +.block > td {
    padding-top: 0;
}

.block--image--flush > td {
    padding-left: 0;
    padding-right: 0;
}

#content > tbody > .block--image--flush:first-of-type > td {
    padding-top: 0;
    padding-bottom: 0;
}

h1, h2, h3, h4, h5 {
    margin: 0;
}

.block--layout.cols-2 .col-1 .block > td,
.block--layout.cols-3 .col-1 .block > td,
.block--layout.cols-3 .col-2 .block > td {
    padding-right: 10px;
}

.block--layout.cols-2 .col-2 .block > td,
.block--layout.cols-3 .col-2 .block > td,
.block--layout.cols-3 .col-3 .block > td {
    padding-left: 10px;
}

.block--paragraph p {
    margin: 0;
}

div.keila-button {
    mso-line-height-rule: exactly;
    mso-text-raise: 7px;
    mso-padding-alt: 0 10px;
}

